// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Change Mining Fees should render with custom props 1`] = `
<SceneWrapper
  avoidKeyboard={true}
  background="body"
  hasTabs={false}
>
  <ScrollViewMock
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flexGrow": 1,
        "padding": 31,
      }
    }
  >
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 22,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "#87939E",
                "borderRadius": 11,
                "borderWidth": 1,
                "height": 22,
                "marginRight": 11,
                "width": 22,
              },
              null,
            ]
          }
        />
        <Text
          style={
            Object {
              "color": "#25292C",
              "flexShrink": 1,
              "fontFamily": "SourceSansPro-Black",
              "fontSize": 22,
              "textAlign": "left",
            }
          }
        >
          High
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 22,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "#87939E",
                "borderRadius": 11,
                "borderWidth": 1,
                "height": 22,
                "marginRight": 11,
                "width": 22,
              },
              null,
            ]
          }
        />
        <Text
          style={
            Object {
              "color": "#25292C",
              "flexShrink": 1,
              "fontFamily": "SourceSansPro-Black",
              "fontSize": 22,
              "textAlign": "left",
            }
          }
        >
          Standard
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 22,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "#87939E",
                "borderRadius": 11,
                "borderWidth": 1,
                "height": 22,
                "marginRight": 11,
                "width": 22,
              },
              null,
            ]
          }
        />
        <Text
          style={
            Object {
              "color": "#25292C",
              "flexShrink": 1,
              "fontFamily": "SourceSansPro-Black",
              "fontSize": 22,
              "textAlign": "left",
            }
          }
        >
          Low
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 22,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "#87939E",
                "borderRadius": 11,
                "borderWidth": 1,
                "height": 22,
                "marginRight": 11,
                "width": 22,
              },
              Object {
                "backgroundColor": "#0073D9",
                "borderColor": "#0073D9",
              },
            ]
          }
        />
        <Text
          style={
            Object {
              "color": "#25292C",
              "flexShrink": 1,
              "fontFamily": "SourceSansPro-Black",
              "fontSize": 22,
              "textAlign": "left",
            }
          }
        >
          Custom
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <View
      style={
        Object {
          "marginBottom": 22,
        }
      }
    >
      <FormField
        autoCapitalize="none"
        autoCorrect={false}
        autoFocus={false}
        forceFocus={false}
        keyboardType="numeric"
        label="Satoshi Per Byte"
        multiline={false}
        onChangeText={[Function]}
        returnKeyType="go"
        value=""
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F1AA19",
          "borderRadius": 11,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "padding": 11,
        }
      }
    >
      <Icon
        allowFontScaling={false}
        color="#FFFFFF"
        name="warning"
        size={31}
      />
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "SourceSansPro-Black",
            "fontSize": 19,
          }
        }
      >
        Using a low fee may increase the amount of time it takes for your transaction to confirm.
      </Text>
    </View>
  </ScrollViewMock>
</SceneWrapper>
`;

exports[`Change Mining Fees should render with high props 1`] = `
<SceneWrapper
  avoidKeyboard={true}
  background="body"
  hasTabs={false}
>
  <ScrollViewMock
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flexGrow": 1,
        "padding": 31,
      }
    }
  >
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 22,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "#87939E",
                "borderRadius": 11,
                "borderWidth": 1,
                "height": 22,
                "marginRight": 11,
                "width": 22,
              },
              Object {
                "backgroundColor": "#0073D9",
                "borderColor": "#0073D9",
              },
            ]
          }
        />
        <Text
          style={
            Object {
              "color": "#25292C",
              "flexShrink": 1,
              "fontFamily": "SourceSansPro-Black",
              "fontSize": 22,
              "textAlign": "left",
            }
          }
        >
          High
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 22,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "#87939E",
                "borderRadius": 11,
                "borderWidth": 1,
                "height": 22,
                "marginRight": 11,
                "width": 22,
              },
              null,
            ]
          }
        />
        <Text
          style={
            Object {
              "color": "#25292C",
              "flexShrink": 1,
              "fontFamily": "SourceSansPro-Black",
              "fontSize": 22,
              "textAlign": "left",
            }
          }
        >
          Standard
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 22,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "#87939E",
                "borderRadius": 11,
                "borderWidth": 1,
                "height": 22,
                "marginRight": 11,
                "width": 22,
              },
              null,
            ]
          }
        />
        <Text
          style={
            Object {
              "color": "#25292C",
              "flexShrink": 1,
              "fontFamily": "SourceSansPro-Black",
              "fontSize": 22,
              "textAlign": "left",
            }
          }
        >
          Low
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 22,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "#87939E",
                "borderRadius": 11,
                "borderWidth": 1,
                "height": 22,
                "marginRight": 11,
                "width": 22,
              },
              null,
            ]
          }
        />
        <Text
          style={
            Object {
              "color": "#25292C",
              "flexShrink": 1,
              "fontFamily": "SourceSansPro-Black",
              "fontSize": 22,
              "textAlign": "left",
            }
          }
        >
          Custom
        </Text>
      </View>
    </TouchableWithoutFeedback>
  </ScrollViewMock>
</SceneWrapper>
`;

exports[`Change Mining Fees should render with low props 1`] = `
<SceneWrapper
  avoidKeyboard={true}
  background="body"
  hasTabs={false}
>
  <ScrollViewMock
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flexGrow": 1,
        "padding": 31,
      }
    }
  >
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 22,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "#87939E",
                "borderRadius": 11,
                "borderWidth": 1,
                "height": 22,
                "marginRight": 11,
                "width": 22,
              },
              null,
            ]
          }
        />
        <Text
          style={
            Object {
              "color": "#25292C",
              "flexShrink": 1,
              "fontFamily": "SourceSansPro-Black",
              "fontSize": 22,
              "textAlign": "left",
            }
          }
        >
          High
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 22,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "#87939E",
                "borderRadius": 11,
                "borderWidth": 1,
                "height": 22,
                "marginRight": 11,
                "width": 22,
              },
              null,
            ]
          }
        />
        <Text
          style={
            Object {
              "color": "#25292C",
              "flexShrink": 1,
              "fontFamily": "SourceSansPro-Black",
              "fontSize": 22,
              "textAlign": "left",
            }
          }
        >
          Standard
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 22,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "#87939E",
                "borderRadius": 11,
                "borderWidth": 1,
                "height": 22,
                "marginRight": 11,
                "width": 22,
              },
              Object {
                "backgroundColor": "#0073D9",
                "borderColor": "#0073D9",
              },
            ]
          }
        />
        <Text
          style={
            Object {
              "color": "#25292C",
              "flexShrink": 1,
              "fontFamily": "SourceSansPro-Black",
              "fontSize": 22,
              "textAlign": "left",
            }
          }
        >
          Low
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 22,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "#87939E",
                "borderRadius": 11,
                "borderWidth": 1,
                "height": 22,
                "marginRight": 11,
                "width": 22,
              },
              null,
            ]
          }
        />
        <Text
          style={
            Object {
              "color": "#25292C",
              "flexShrink": 1,
              "fontFamily": "SourceSansPro-Black",
              "fontSize": 22,
              "textAlign": "left",
            }
          }
        >
          Custom
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F1AA19",
          "borderRadius": 11,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "padding": 11,
        }
      }
    >
      <Icon
        allowFontScaling={false}
        color="#FFFFFF"
        name="warning"
        size={31}
      />
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "SourceSansPro-Black",
            "fontSize": 19,
          }
        }
      >
        Using a low fee may increase the amount of time it takes for your transaction to confirm.
      </Text>
    </View>
  </ScrollViewMock>
</SceneWrapper>
`;

exports[`Change Mining Fees should render with standard props 1`] = `
<SceneWrapper
  avoidKeyboard={true}
  background="body"
  hasTabs={false}
>
  <ScrollViewMock
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flexGrow": 1,
        "padding": 31,
      }
    }
  >
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 22,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "#87939E",
                "borderRadius": 11,
                "borderWidth": 1,
                "height": 22,
                "marginRight": 11,
                "width": 22,
              },
              null,
            ]
          }
        />
        <Text
          style={
            Object {
              "color": "#25292C",
              "flexShrink": 1,
              "fontFamily": "SourceSansPro-Black",
              "fontSize": 22,
              "textAlign": "left",
            }
          }
        >
          High
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 22,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "#87939E",
                "borderRadius": 11,
                "borderWidth": 1,
                "height": 22,
                "marginRight": 11,
                "width": 22,
              },
              Object {
                "backgroundColor": "#0073D9",
                "borderColor": "#0073D9",
              },
            ]
          }
        />
        <Text
          style={
            Object {
              "color": "#25292C",
              "flexShrink": 1,
              "fontFamily": "SourceSansPro-Black",
              "fontSize": 22,
              "textAlign": "left",
            }
          }
        >
          Standard
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 22,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "#87939E",
                "borderRadius": 11,
                "borderWidth": 1,
                "height": 22,
                "marginRight": 11,
                "width": 22,
              },
              null,
            ]
          }
        />
        <Text
          style={
            Object {
              "color": "#25292C",
              "flexShrink": 1,
              "fontFamily": "SourceSansPro-Black",
              "fontSize": 22,
              "textAlign": "left",
            }
          }
        >
          Low
        </Text>
      </View>
    </TouchableWithoutFeedback>
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 22,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "#87939E",
                "borderRadius": 11,
                "borderWidth": 1,
                "height": 22,
                "marginRight": 11,
                "width": 22,
              },
              null,
            ]
          }
        />
        <Text
          style={
            Object {
              "color": "#25292C",
              "flexShrink": 1,
              "fontFamily": "SourceSansPro-Black",
              "fontSize": 22,
              "textAlign": "left",
            }
          }
        >
          Custom
        </Text>
      </View>
    </TouchableWithoutFeedback>
  </ScrollViewMock>
</SceneWrapper>
`;
